--- a/index.html
+++ b/index.html
@@ -69,53 +69,53 @@
       </section>
       <!-- Our advantages -->
       <section class="advantages section">
-        <div class="advantages-container container">
+        <div class="container">
           <h2 class="visually-hidden">Наши преимущества</h2>
           <ul class="advantages-list list">
-            <li class="advantages-item">
+            <li class="advantages-list__item">
               <div class="thumb-icon">
                 <svg width="70" height="70">
                   <use href="./images/sprite.svg#icon-antenna"></use>
                 </svg>
               </div>
-              <h3 class="advantages-item-title">Внимание к деталям</h3>
-              <p class="advantages-item-text">
+              <h3 class="advantages-list__title">Внимание к деталям</h3>
+              <p class="advantages-list__text">
                 Идейные соображения, а также начало повседневной работы по
                 формированию позиции.
               </p>
             </li>
-            <li class="advantages-item">
+            <li class="advantages-list__item">
               <div class="thumb-icon">
                 <svg width="70" height="70">
                   <use href="./images/sprite.svg#icon-clock"></use>
                 </svg>
               </div>
-              <h3 class="advantages-item-title">Пунктуальность</h3>
-              <p class="advantages-item-text">
+              <h3 class="advantages-list__title">Пунктуальность</h3>
+              <p class="advantages-list__text">
                 Задача организации, в особенности же рамки и место обучения
                 кадров влечет за собой.
               </p>
             </li>
-            <li class="advantages-item">
+            <li class="advantages-list__item">
               <div class="thumb-icon">
                 <svg width="70" height="70">
                   <use href="./images/sprite.svg#icon-diagram"></use>
                 </svg>
               </div>
-              <h3 class="advantages-item-title">Планирование</h3>
-              <p class="advantages-item-text">
+              <h3 class="advantages-list__title">Планирование</h3>
+              <p class="advantages-list__text">
                 Равным образом консультация с широким активом в значительной
                 степени обуславливает.
               </p>
             </li>
-            <li class="advantages-item">
+            <li class="advantages-list__item">
               <div class="thumb-icon">
                 <svg width="70" height="70">
                   <use href="./images/sprite.svg#icon-astronaut"></use>
                 </svg>
               </div>
-              <h3 class="advantages-item-title">Современные технологии</h3>
-              <p class="advantages-item-text">
+              <h3 class="advantages-list__title">Современные технологии</h3>
+              <p class="advantages-list__text">
                 Значимость этих проблем настолько очевидна, что реализация
                 плановых заданий.
               </p>
