--- a/index.html
+++ b/index.html
@@ -128,37 +128,37 @@
         <div class="container">
           <h2 class="work-title">Чем мы занимаемся</h2>
           <ul class="work-list list">
-            <li class="work-list-item">
-              <div class="work-item-thumb">
+            <li class="work-list__item">
+              <div class="work-list__thumb">
                 <img
                   src="./images/what-we-do/box1.jpg"
                   alt="Програмирование на планшете"
                   width="370"
                   height="294"
                 />
-                <p class="work-thumb-text">Десктопные приложения</p>
+                <p class="work-list__text">Десктопные приложения</p>
               </div>
             </li>
-            <li class="work-list-item">
-              <div class="work-item-thumb">
+            <li class="work-list__item">
+              <div class="work-list__thumb">
                 <img
                   src="./images/what-we-do/box2.jpg"
                   alt="Програмирование на ноутбуке"
                   width="370"
                   height="294"
                 />
-                <p class="work-thumb-text">Мобильные приложения</p>
+                <p class="work-list__text">Мобильные приложения</p>
               </div>
             </li>
-            <li class="work-list-item">
-              <div class="work-item-thumb">
+            <li class="work-list__item">
+              <div class="work-list__thumb">
                 <img
                   src="./images/what-we-do/box3.jpg"
                   alt="Выбор цвета на планшете"
                   width="370"
                   height="294"
                 />
-                <p class="work-thumb-text">Дизайнерские решения</p>
+                <p class="work-list__text">Дизайнерские решения</p>
               </div>
             </li>
           </ul>
