--- a/index.html
+++ b/index.html
@@ -393,61 +393,61 @@
     </main>
     <!-- FOOTER -->
     <footer class="footer">
-      <div class="footer-container container">
-        <div class="logo-address">
-          <a href="./index.html" class="logo logo-footer link"
+      <div class="footer__container container">
+        <div class="fotter__address">
+          <a href="./index.html" class="logo footer__logo link"
             ><span class="logo-text">Web</span>Studio</a
           >
           <address class="address">
-            <ul class="address-list list">
-              <li class="address-item">
+            <ul class="address__list list">
+              <li class="address__item">
                 <a
                   href="https://goo.gl/maps/xPSwr2SGFZyQGNAF9"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
-                  class="address-link map link"
+                  class="address__link map link"
                   >г. Киев, пр-т Леси Украинки, 26</a
                 >
               </li>
-              <li class="address-item">
-                <a href="mailto:info@devstudio.com" class="address-link link"
+              <li class="address__item">
+                <a href="mailto:info@devstudio.com" class="address__link link"
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="address-item">
-                <a href="tel:+380961111111" class="address-link link"
+              <li class="address__item">
+                <a href="tel:+380961111111" class="address__link link"
                   >+38 096 111 11 11</a
                 >
               </li>
             </ul>
           </address>
         </div>
-        <div class="join-us">
-          <h2 class="join-title">присоединяйтесь</h2>
-          <ul class="join-list list">
-            <li class="join-item">
-              <a href="" class="join-link">
+        <div class="join">
+          <h2 class="join__title">присоединяйтесь</h2>
+          <ul class="join__list list">
+            <li class="join__item">
+              <a href="" class="join__link">
                 <svg width="20" height="20">
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="join-item">
-              <a href="" class="join-link">
+            <li class="join__item">
+              <a href="" class="join__link">
                 <svg width="20" height="20">
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="join-item">
-              <a href="" class="join-link">
+            <li class="join__item">
+              <a href="" class="join__link">
                 <svg width="20" height="20">
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="join-item">
-              <a href="" class="join-link">
+            <li class="join__item">
+              <a href="" class="join__link">
                 <svg width="20" height="20">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
@@ -458,19 +458,19 @@
         <form
           action="#"
           name="subscribe-form"
-          class="subscribe-form"
+          class="subscribe"
           autocomplete="on"
         >
-          <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+          <h2 class="subscribe__title">Подпишитесь на рассылку</h2>
           <input
             type="email"
             name="email"
-            class="subscribe-input"
+            class="subscribe__input"
             placeholder="E-mail"
           />
-          <button type="submit" class="btn subscribe-btn">
+          <button type="submit" class="subscribe__btn btn">
             Подписаться
-            <svg width="24" height="24" class="subscribe-svg">
+            <svg width="24" height="24" class="subscribe__svg">
               <use href="./images/sprite.svg#icon-send"></use>
             </svg>
           </button>
