--- a/index.html
+++ b/index.html
@@ -479,86 +479,90 @@
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
-        <button class="btn modal-close" data-modal-close>
+        <button class="modal__close btn" data-modal-close>
           <svg width="18" height="18">
             <use href="./images/sprite.svg#icon-close"></use>
           </svg>
         </button>
-        <p class="modal-title title">Оставьте свои данные, мы вам перезвоним</p>
+        <p class="modal__title title">
+          Оставьте свои данные, мы вам перезвоним
+        </p>
         <form action="#" class="modal-form">
           <div class="form-field">
-            <label for="user-name" class="form-label">Имя</label>
+            <label for="user-name" class="modal-form__label">Имя</label>
             <div class="wrap-input">
               <input
                 type="text"
                 name="user-name"
                 id="user-name"
-                class="form-input"
+                class="modal-form__input"
                 required
               />
-              <svg width="18" height="18" class="form-input-svg">
+              <svg width="18" height="18" class="modal-form__svg">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
             </div>
           </div>
           <div class="form-field">
-            <label for="user-phone" class="form-label">Телефон</label>
+            <label for="user-phone" class="modal-form__label">Телефон</label>
             <div class="wrap-input">
               <input
                 type="tel"
                 name="user-phone"
                 id="user-phone"
-                class="form-input"
+                class="modal-form__input"
                 required
               />
-              <svg width="18" height="18" class="form-input-svg">
+              <svg width="18" height="18" class="modal-form__svg">
                 <use href="./images/icons.svg#icon-phone"></use>
               </svg>
             </div>
           </div>
           <div class="form-field">
-            <label for="user-email" class="form-label">Почта</label>
+            <label for="user-email" class="modal-form__label">Почта</label>
             <div class="wrap-input">
               <input
                 type="email"
                 name="user-email"
                 id="user-email"
-                class="form-input"
+                class="modal-form__input"
                 required
               />
-              <svg width="18" height="18" class="form-input-svg">
+              <svg width="18" height="18" class="modal-form__svg">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
           </div>
           <div class="form-field">
-            <label for="user-comment" class="form-label">Комментарий</label>
+            <label for="user-comment" class="modal-form__label"
+              >Комментарий</label
+            >
             <textarea
               name="user-comment"
               id="user-comment"
-              class="form-textarea"
+              class="modal-form__textarea"
               placeholder="Введите текст"
             ></textarea>
           </div>
-          <div class="form-field-privacy">
+          <div class="privacy">
             <input
               type="checkbox"
-              class="privacy visually-hidden"
+              class="privacy__input visually-hidden"
               name="modal-check"
               id="modal-check"
             />
-            <label class="privacy-text" for="modal-check">
-              <svg width="16" height="15" class="privacy-icon">
+            <label class="privacy__text" for="modal-check">
+              <svg width="16" height="15" class="privacy__icon">
                 <use href="./images/sprite.svg#icon-privacy"></use>
               </svg>
               Соглашаюсь с рассылкой и принимаю &nbsp;<a
                 href=""
-                class="privacy-link link"
+                class="privacy__link link"
                 >Условия договора</a
               >
             </label>
           </div>
-          <button type="submit" class="btn modal-btn-submit">Отправить</button>
+          <button type="submit" class="btn modal__submit">Отправить</button>
         </form>
       </div>
     </div>
