--- a/portfolio.html
+++ b/portfolio.html
@@ -62,43 +62,45 @@
     <main>
       <section class="gallery section">
         <div class="container">
-          <h1 class="gallery-title visually-hidden">Галлерея работ</h1>
-          <ul class="filter-list list">
-            <li class="filter-item">
-              <button type="button" class="btn filter-btn active">Все</button>
+          <h1 class="gallery__title visually-hidden">Галлерея работ</h1>
+          <ul class="filter list">
+            <li class="filter__item">
+              <button type="button" class="btn filter__btn btn--active">
+                Все
+              </button>
             </li>
-            <li class="filter-item">
-              <button type="button" class="btn filter-btn">Веб-сайты</button>
+            <li class="filter__item">
+              <button type="button" class="btn filter__btn">Веб-сайты</button>
             </li>
-            <li class="filter-item">
-              <button type="button" class="btn filter-btn">Приложения</button>
+            <li class="filter__item">
+              <button type="button" class="btn filter__btn">Приложения</button>
             </li>
-            <li class="filter-item">
-              <button type="button" class="btn filter-btn">Дизайн</button>
+            <li class="filter__item">
+              <button type="button" class="btn filter__btn">Дизайн</button>
             </li>
-            <li class="filter-item">
-              <button type="button" class="btn filter-btn">Маркетинг</button>
+            <li class="filter__item">
+              <button type="button" class="btn filter__btn">Маркетинг</button>
             </li>
           </ul>
           <ul class="gallery-list list">
-            <li class="gallery-item">
-              <a href="" class="gallery-link link">
+            <li class="gallery-list__item">
+              <a href="" class="gallery-list__link link">
                 <div class="gallery-thumb">
                   <img src="./images/gallery/img1.jpg" alt="ноутбук" />
-                  <p class="gallery-thumb-text">
+                  <p class="gallery-thumb__text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="item-contant">
-                  <h2 class="gallery-item-title">Технокряк</h2>
-                  <p class="gallery-item-text">Веб-сайт</p>
+                <div class="gallery-contant">
+                  <h2 class="gallery-contant__title">Технокряк</h2>
+                  <p class="gallery-contant__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="gallery-item">
-              <a href="" class="gallery-link link">
+            <li class="gallery-list__item">
+              <a href="" class="gallery-list__link link">
                 <div class="gallery-thumb">
                   <img
                     src="./images/gallery/img2.jpg"
@@ -106,22 +108,22 @@
                     width="370"
                     height="294"
                   />
-                  <p class="gallery-thumb-text">
+                  <p class="gallery-thumb__text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="item-contant">
-                  <h2 class="gallery-item-title">
+                <div class="gallery-contant">
+                  <h2 class="gallery-contant__title">
                     Постер New Orlean vs Golden Star
                   </h2>
-                  <p class="gallery-item-text">Дизайн</p>
+                  <p class="gallery-contant__text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="gallery-item">
-              <a href="" class="gallery-link link">
+            <li class="gallery-list__item">
+              <a href="" class="gallery-list__link link">
                 <div class="gallery-thumb">
                   <img
                     src="./images/gallery/img3.jpg"
@@ -129,20 +131,20 @@
                     width="370"
                     height="294"
                   />
-                  <p class="gallery-thumb-text">
+                  <p class="gallery-thumb__text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="item-contant">
-                  <h2 class="gallery-item-title">Ресторан Seafood</h2>
-                  <p class="gallery-item-text">Приложение</p>
+                <div class="gallery-contant">
+                  <h2 class="gallery-contant__title">Ресторан Seafood</h2>
+                  <p class="gallery-contant__text">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="gallery-item">
-              <a href="" class="gallery-link link">
+            <li class="gallery-list__item">
+              <a href="" class="gallery-list__link link">
                 <div class="gallery-thumb">
                   <img
                     src="./images/gallery/img4.jpg"
@@ -150,20 +152,20 @@
                     width="370"
                     height="294"
                   />
-                  <p class="gallery-thumb-text">
+                  <p class="gallery-thumb__text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="item-contant">
-                  <h2 class="gallery-item-title">Проект Prime</h2>
-                  <p class="gallery-item-text">Маркетинг</p>
+                <div class="gallery-contant">
+                  <h2 class="gallery-contant__title">Проект Prime</h2>
+                  <p class="gallery-contant__text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="gallery-item">
-              <a href="" class="gallery-link link">
+            <li class="gallery-list__item">
+              <a href="" class="gallery-list__link link">
                 <div class="gallery-thumb">
                   <img
                     src="./images/gallery/img5.jpg"
@@ -171,20 +173,20 @@
                     width="370"
                     height="294"
                   />
-                  <p class="gallery-thumb-text">
+                  <p class="gallery-thumb__text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="item-contant">
-                  <h2 class="gallery-item-title">Проект Boxes</h2>
-                  <p class="gallery-item-text">Приложение</p>
+                <div class="gallery-contant">
+                  <h2 class="gallery-contant__title">Проект Boxes</h2>
+                  <p class="gallery-contant__text">Приложение</p>
                 </div>
               </a>
             </li>
-            <li class="gallery-item">
-              <a href="" class="gallery-link link">
+            <li class="gallery-list__item">
+              <a href="" class="gallery-list__link link">
                 <div class="gallery-thumb">
                   <img
                     src="./images/gallery/img6.jpg"
@@ -192,22 +194,22 @@
                     width="370"
                     height="294"
                   />
-                  <p class="gallery-thumb-text">
+                  <p class="gallery-thumb__text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="item-contant">
-                  <h2 lang="en" class="gallery-item-title">
+                <div class="gallery-contant">
+                  <h2 lang="en" class="gallery-contant__title">
                     Inspiration has no Borders
                   </h2>
-                  <p class="gallery-item-text">Веб-сайт</p>
+                  <p class="gallery-contant__text">Веб-сайт</p>
                 </div>
               </a>
             </li>
-            <li class="gallery-item">
-              <a href="" class="gallery-link link">
+            <li class="gallery-list__item">
+              <a href="" class="gallery-list__link link">
                 <div class="gallery-thumb">
                   <img
                     src="./images/gallery/img7.jpg"
@@ -215,20 +217,22 @@
                     width="370"
                     height="294"
                   />
-                  <p class="gallery-thumb-text">
+                  <p class="gallery-thumb__text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="item-contant">
-                  <h2 class="gallery-item-title">Издание Limited Edition</h2>
-                  <p class="gallery-item-text">Дизайн</p>
+                <div class="gallery-contant">
+                  <h2 class="gallery-contant__title">
+                    Издание Limited Edition
+                  </h2>
+                  <p class="gallery-contant__text">Дизайн</p>
                 </div>
               </a>
             </li>
-            <li class="gallery-item">
-              <a href="" class="gallery-link link">
+            <li class="gallery-list__item">
+              <a href="" class="gallery-list__link link">
                 <div class="gallery-thumb">
                   <img
                     src="./images/gallery/img8.jpg"
@@ -236,20 +240,20 @@
                     width="370"
                     height="294"
                   />
-                  <p class="gallery-thumb-text">
+                  <p class="gallery-thumb__text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="item-contant">
-                  <h2 class="gallery-item-title">Проект LAB</h2>
-                  <p class="gallery-item-text">Маркетинг</p>
+                <div class="gallery-contant">
+                  <h2 class="gallery-contant__title">Проект LAB</h2>
+                  <p class="gallery-contant__text">Маркетинг</p>
                 </div>
               </a>
             </li>
-            <li class="gallery-item">
-              <a href="" class="gallery-link link">
+            <li class="gallery-list__item">
+              <a href="" class="gallery-list__link link">
                 <div class="gallery-thumb">
                   <img
                     src="./images/gallery/img9.jpg"
@@ -257,15 +261,17 @@
                     width="370"
                     height="294"
                   />
-                  <p class="gallery-thumb-text">
+                  <p class="gallery-thumb__text">
                     Технокряк это современная площадка распространения
                     коронавируса. Компании используют эту платформу для
                     цифрового шпионажа и атак на защищённые сервера конкурентов.
                   </p>
                 </div>
-                <div class="item-contant">
-                  <h2 lang="en" class="gallery-item-title">Growing Business</h2>
-                  <p class="gallery-item-text">Приложение</p>
+                <div class="gallery-contant">
+                  <h2 lang="en" class="gallery-contant__title">
+                    Growing Business
+                  </h2>
+                  <p class="gallery-contant__text">Приложение</p>
                 </div>
               </a>
             </li>
@@ -275,61 +281,61 @@
     </main>
     <!-- FOOTER -->
     <footer class="footer">
-      <div class="footer-container container">
-        <div class="logo-address">
-          <a href="./index.html" class="logo logo-footer link"
+      <div class="footer__container container">
+        <div class="footer__address">
+          <a href="./index.html" class="logo footer__logo link"
             ><span class="logo-text">Web</span>Studio</a
           >
           <address class="address">
-            <ul class="address-list list">
-              <li class="address-item">
+            <ul class="address__list list">
+              <li class="address__item">
                 <a
                   href="https://goo.gl/maps/xPSwr2SGFZyQGNAF9"
                   target="_blank"
                   rel="noopener noreferrer nofollow"
-                  class="address-link map link"
+                  class="address__link map link"
                   >г. Киев, пр-т Леси Украинки, 26</a
                 >
               </li>
-              <li class="address-item">
-                <a href="mailto:info@devstudio.com" class="address-link link"
+              <li class="address__item">
+                <a href="mailto:info@devstudio.com" class="address__link link"
                   >info@devstudio.com</a
                 >
               </li>
-              <li class="address-item">
-                <a href="tel:+380961111111" class="address-link link"
+              <li class="address__item">
+                <a href="tel:+380961111111" class="address__link link"
                   >+38 096 111 11 11</a
                 >
               </li>
             </ul>
           </address>
         </div>
-        <div class="join-us">
-          <h2 class="join-title">присоединяйтесь</h2>
-          <ul class="join-list list">
-            <li class="join-item">
-              <a href="" class="join-link">
+        <div class="join">
+          <h2 class="join__title">присоединяйтесь</h2>
+          <ul class="join__list list">
+            <li class="join__item">
+              <a href="" class="join__link">
                 <svg width="20" height="20">
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="join-item">
-              <a href="" class="join-link">
+            <li class="join__item">
+              <a href="" class="join__link">
                 <svg width="20" height="20">
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="join-item">
-              <a href="" class="join-link">
+            <li class="join__item">
+              <a href="" class="join__link">
                 <svg width="20" height="20">
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="join-item">
-              <a href="" class="join-link">
+            <li class="join__item">
+              <a href="" class="join__link">
                 <svg width="20" height="20">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
@@ -340,19 +346,19 @@
         <form
           action="#"
           name="subscribe-form"
-          class="subscribe-form"
+          class="subscribe"
           autocomplete="on"
         >
-          <h2 class="subscribe-title">Подпишитесь на рассылку</h2>
+          <h2 class="subscribe__title">Подпишитесь на рассылку</h2>
           <input
             type="email"
             name="email"
-            class="subscribe-input"
+            class="subscribe__input"
             placeholder="E-mail"
           />
-          <button type="submit" class="btn subscribe-btn">
+          <button type="submit" class="subscribe__btn btn">
             Подписаться
-            <svg width="24" height="24" class="subscribe-svg">
+            <svg width="24" height="24" class="subscribe__svg">
               <use href="./images/sprite.svg#icon-send"></use>
             </svg>
           </button>
