--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
     <!-- FOOTER -->
     <footer class="footer">
       <div class="footer__container container">
-        <div class="fotter__address">
+        <div class="fotter-address">
           <a href="./index.html" class="logo footer__logo link"
             ><span class="logo-text">Web</span>Studio</a
           >
