--- a/index.html
+++ b/index.html
@@ -424,30 +424,30 @@
         </div>
         <div class="join">
           <h2 class="join__title">присоединяйтесь</h2>
-          <ul class="join__list list">
-            <li class="join__item">
-              <a href="" class="join__link">
+          <ul class="join-list list">
+            <li class="join-list__item">
+              <a href="" class="join-list__link">
                 <svg width="20" height="20">
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="join__item">
-              <a href="" class="join__link">
+            <li class="join-list__item">
+              <a href="" class="join-list__link">
                 <svg width="20" height="20">
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="join__item">
-              <a href="" class="join__link">
+            <li class="join-list__item">
+              <a href="" class="join-list__link">
                 <svg width="20" height="20">
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="join__item">
-              <a href="" class="join__link">
+            <li class="join-list__item">
+              <a href="" class="join-list__link">
                 <svg width="20" height="20">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
