Sass Architecture Structure

--- a/portfolio.html
+++ b/portfolio.html
@@ -63,23 +63,31 @@
       <section class="gallery section">
         <div class="container">
           <h1 class="gallery__title visually-hidden">Галлерея работ</h1>
-          <ul class="filter list">
-            <li class="filter__item">
-              <button type="button" class="btn filter__btn btn--active">
+          <ul class="gallery-filter list">
+            <li class="gallery-filter__item">
+              <button type="button" class="btn gallery-filter__btn btn--active">
                 Все
               </button>
             </li>
-            <li class="filter__item">
-              <button type="button" class="btn filter__btn">Веб-сайты</button>
+            <li class="gallery-filter__item">
+              <button type="button" class="btn gallery-filter__btn">
+                Веб-сайты
+              </button>
             </li>
-            <li class="filter__item">
-              <button type="button" class="btn filter__btn">Приложения</button>
+            <li class="gallery-filter__item">
+              <button type="button" class="btn gallery-filter__btn">
+                Приложения
+              </button>
             </li>
-            <li class="filter__item">
-              <button type="button" class="btn filter__btn">Дизайн</button>
+            <li class="gallery-filter__item">
+              <button type="button" class="btn gallery-filter__btn">
+                Дизайн
+              </button>
             </li>
-            <li class="filter__item">
-              <button type="button" class="btn filter__btn">Маркетинг</button>
+            <li class="gallery-filter__item">
+              <button type="button" class="btn gallery-filter__btn">
+                Маркетинг
+              </button>
             </li>
           </ul>
           <ul class="gallery-list list">
@@ -312,30 +320,30 @@
         </div>
         <div class="join">
           <h2 class="join__title">присоединяйтесь</h2>
-          <ul class="join__list list">
-            <li class="join__item">
-              <a href="" class="join__link">
+          <ul class="join-list list">
+            <li class="join-list__item">
+              <a href="" class="join-list__link">
                 <svg width="20" height="20">
                   <use href="./images/sprite.svg#icon-instagram"></use>
                 </svg>
               </a>
             </li>
-            <li class="join__item">
-              <a href="" class="join__link">
+            <li class="join-list__item">
+              <a href="" class="join-list__link">
                 <svg width="20" height="20">
                   <use href="./images/sprite.svg#icon-twitter"></use>
                 </svg>
               </a>
             </li>
-            <li class="join__item">
-              <a href="" class="join__link">
+            <li class="join-list__item">
+              <a href="" class="join-list__link">
                 <svg width="20" height="20">
                   <use href="./images/sprite.svg#icon-facebook"></use>
                 </svg>
               </a>
             </li>
-            <li class="join__item">
-              <a href="" class="join__link">
+            <li class="join-list__item">
+              <a href="" class="join-list__link">
                 <svg width="20" height="20">
                   <use href="./images/sprite.svg#icon-linkedin"></use>
                 </svg>
