Оператор конкатенації scss

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <header class="header">
       <div class="header__container container">
         <a href="./index.html" class="logo link"
-          ><span class="logo-text">Web</span>Studio</a
+          ><span class="logo__text">Web</span>Studio</a
         >
         <nav class="nav">
           <ul class="nav__list list">
@@ -126,7 +126,7 @@
       <!--What we do -->
       <section class="work section">
         <div class="container">
-          <h2 class="work-title">Чем мы занимаемся</h2>
+          <h2 class="work__title">Чем мы занимаемся</h2>
           <ul class="work-list list">
             <li class="work-list__item">
               <div class="work-list__thumb">
@@ -396,7 +396,7 @@
       <div class="footer__container container">
         <div class="fotter-address">
           <a href="./index.html" class="logo footer__logo link"
-            ><span class="logo-text">Web</span>Studio</a
+            ><span class="logo__text">Web</span>Studio</a
           >
           <address class="address">
             <ul class="address__list list">
