--- a/index.html
+++ b/index.html
@@ -422,8 +422,8 @@
             </ul>
           </address>
         </div>
-        <div class="join">
-          <h2 class="join__title">присоединяйтесь</h2>
+        <div class="join-us">
+          <h2 class="join-us__title">присоединяйтесь</h2>
           <ul class="join-list list">
             <li class="join-list__item">
               <a href="" class="join-list__link">
@@ -458,19 +458,19 @@
         <form
           action="#"
           name="subscribe-form"
-          class="subscribe"
+          class="subscribe-form"
           autocomplete="on"
         >
-          <h2 class="subscribe__title">Подпишитесь на рассылку</h2>
+          <h2 class="subscribe-form__title">Подпишитесь на рассылку</h2>
           <input
             type="email"
             name="email"
-            class="subscribe__input"
+            class="subscribe-form__input"
             placeholder="E-mail"
           />
-          <button type="submit" class="subscribe__btn btn">
+          <button type="submit" class="subscribe-form__btn btn">
             Подписаться
-            <svg width="24" height="24" class="subscribe__svg">
+            <svg width="24" height="24" class="subscribe-form__svg">
               <use href="./images/sprite.svg#icon-send"></use>
             </svg>
           </button>
